# nvader

./: .gitignore  Makefile  QUICKSTART.md  README.md  init_repo.sh  main.py  make.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  certification-map.md
examples/: README.md  build-your-own-x.md  nvt-sg.md  sample.md  sample.txt
src/nvidia_agentic_research_engineer/: cli.py  config.py
src/nvidia_agentic_research_engineer/agents/: __init__.py  base.py  react.py
src/nvidia_agentic_research_engineer/core/: documents.py
src/nvidia_agentic_research_engineer/ingestion/: chunking.py  loaders.py
src/nvidia_agentic_research_engineer/retrieval/: __init__.py  embeddings.py  models.py  pipeline.py  vector_store.py
src/nvidia_agentic_research_engineer/tools/: __init__.py  convert2md.py  registry.py  tracing.py
tests/: test_agents.py  test_chunking.py  test_cli.py  test_documents.py  test_ingestion_loaders.py  test_retrieval_embeddings.py  test_retrieval_pipeline.py  test_retrieval_vector_store.py
tests/test_files/: test.md
