[project]
name = "nvidia-agentic-research-engineer"
version = "0.1.0"
description = "A production-style Agentic AI Research and Engineering Assistant for NVIDIA Agentic AI certification preparation."
authors = [{ name = "Mouad Jaouhari" }]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
nvader = "nvidia_agentic_research_engineer.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100